--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,9 @@ body {
 
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
+    height: 100vh;
 }
 
 /* Buttons */
@@ -27,16 +28,15 @@ button {
     box-shadow: 2px 3px 5px #464040b5;
     margin: 5px;
     transition: all 300ms;
-    font-family: 'Roboto Light';
 }
 
-button:hover{
+button:hover {
     cursor: pointer;
     background-color: rgb(60, 60, 136);
     box-shadow: 2px 3px 5px #2e2b2b
 }
 
-button:disabled{
+button:disabled {
     cursor: not-allowed;
     background-color: rgb(94, 94, 106);
     box-shadow: 2px 3px 5px #464040b5;
@@ -44,70 +44,107 @@ button:disabled{
 
 /* Inputs */
 
-label{
-    color:white;
-    font-family: 'Roboto Light';
+label {
+    color: white;
     font-size: 25px;
 }
 
-input{
+input {
     box-shadow: 2px 3px 5px #464040b5;
     padding: 10px;
     margin: 5px;
     border-radius: 5px;
     width: 800px;
-    font-family: 'Roboto Light';
 }
 
-select:hover, input:hover{
+select:hover,
+input:hover {
     box-shadow: 2px 3px 5px #2e2b2b
 }
 
-select{
+select {
     padding: 10px;
     border-radius: 5px;
     margin: 5px;
     transition: all 300ms;
 }
 
-#url-form{
-    margin:30px;
+#url-form {
     display: flex;
 }
 
-#generate-palette-form{
-    margin:30px;
+#generate-palette-form {
+    margin: 10px;
     display: flex;
 }
 
-#img-rendered-container{
-    margin:30px;
-    height: 300px;
-    width: 500px;
+#img-rendered-container {
+    margin: 30px;
+    height: 200px;
+    width: 400px;
     background-color: #ededed1c;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#palette-container{
-    margin: 30px;
+#palette-container {
+    margin: 10px;
     display: flex;
     flex-wrap: wrap;
+    height: 20vh;
 }
 
-#palette-container div{
+#palette-container div {
     display: flex;
     align-items: flex-end;
-    width: 180px;
-    height: 180px;
+    width: 22vh;
+    height: 20vh;
 }
 
 #palette-container div p {
-    background: linear-gradient(to top, #3e3e3eb3, #343434b0, #3e3e3ea6, #6464646b, #ffffff00);    height: 35px;
+    background: linear-gradient(to top, #3e3e3eb3, #343434b0, #3e3e3ea6, #6464646b, #ffffff00);
+    height: 35px;
     display: flex;
     align-items: flex-end;
     justify-content: center;
     color: white;
     width: 100%;
+}
+
+/* Footer */
+
+footer {
+    padding: 20px 50px 0px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid #ffffff29;
+}
+
+#sign {
+    color: white;
+    max-width: 200px;
+    opacity: 0.2;
+    transition: all 300ms ease-in-out;
+}
+
+#sign:hover {
+    user-select: none;
+    opacity: 1;
+}
+
+#socialNetworks {
+    font-weight: 600;
+    margin-left: auto;
+    display: flex;
+    width: 60px;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+footer a {
+    text-decoration: none;
+    color: white;
 }
