--- a/styles.css
+++ b/styles.css
@@ -120,11 +120,11 @@ footer {
     justify-content: space-between;
     align-items: center;
     border-top: 1px solid #ffffff29;
+    width: 100%;
 }
 
 #sign {
     color: white;
-    max-width: 200px;
     opacity: 0.2;
     transition: all 300ms ease-in-out;
 }
